--- a/style.css
+++ b/style.css
@@ -144,21 +144,23 @@ html {
     width: 300px;
     padding: 20px;
     background-color: white;
-    border: 2px solid #ffffff;
+    border: 0.5px solid #ffffff;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
     color: black;
 }
 
 .popup h2 {
     text-align: center;
-    color: rgb(133, 133, 133);
+    color: rgb(255, 0, 0);
+    font-size: 4vh;
 }
 
 .popup p {
     text-align: center;
     margin: 2%;
     font-size: 3vh;
-    color: rgb(104, 104, 104);
+    color: rgb(255, 0, 0);
+    font-family: 'Courier New', Courier, monospace;
 }
 
 .popup button {
